--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "customscript",
+  "name": "@himanshutiket/customscript",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,5 +11,8 @@
   "license": "ISC",
   "bin": {
     "say-hello": "./cli.js"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.23.2"
   }
 }
