--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 registry=https://registry.npmjs.org/
 @himanshutiket:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:_authToken=${{Github_token}}
+//npm.pkg.github.com/:_authToken=${{GITHUB_TOKEN}}
