--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 registry=https://registry.npmjs.org/
+@tiket:registry=https://npm.pkg.github.com/
 @himanshutiket:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=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
